--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ember-cli-backstretch",
   "version": "0.0.0",
-  "description": "The default blueprint for ember-cli addons.",
+  "description": "Ember component for jQuery Backstretch.",
   "directories": {
     "doc": "doc",
     "test": "tests"
@@ -11,11 +11,11 @@
     "start": "ember server",
     "test": "ember try:testall"
   },
-  "repository": "",
+  "repository": "https://github.com/lawitschka/ember-cli-backstretch",
   "engines": {
     "node": ">= 0.10.0"
   },
-  "author": "",
+  "author": "Moritz Lawitschka",
   "license": "MIT",
   "devDependencies": {
     "broccoli-asset-rev": "^2.1.2",
@@ -38,7 +38,12 @@
     "ember-try": "0.0.6"
   },
   "keywords": [
-    "ember-addon"
+    "ember-addon",
+    "ember",
+    "jquery",
+    "backstretch",
+    "back-stretch",
+    "background"
   ],
   "dependencies": {
     "ember-cli-babel": "^5.1.3"
