--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,11 @@
     "ember-qunit-notifications": "0.0.7",
     "ember-resolver": "~0.1.18",
     "jquery": "^1.11.3",
+    "jquery-backstretch": "^2.0.4",
     "loader.js": "ember-cli/loader.js#3.2.1",
     "qunit": "~1.18.0"
+  },
+  "resolutions": {
+    "jquery": "^1.11.3"
   }
 }
